--- a/_posts/2018-02-09-roadmap.markdown
+++ b/_posts/2018-02-09-roadmap.markdown
@@ -2,6 +2,10 @@
 layout: post
 title: "Product roadmap"
 date:   2018-02-09 11:15:01 +0000
+excerpt: >
+  The roadmap is a list of potential improvements for the Missive system, and
+  may be useful for readers wanting to know if and when a particular feature
+  might be included.
 ---
 
 The roadmap is a list of improvements for the Missive system. It is split into
