Add another roadmap idea

--- a/_posts/2018-02-09-roadmap.markdown
+++ b/_posts/2018-02-09-roadmap.markdown
@@ -61,3 +61,4 @@ be nice to have it working out-of-the-box)
 ### Local system
 
 * Scheduled automated tests for critical forms
+* Pre-defined mail settings for popular hosts
