--- a/_posts/2018-02-09-roadmap.markdown
+++ b/_posts/2018-02-09-roadmap.markdown
@@ -38,7 +38,7 @@ tokens
 other folks who administrate a non-trivial number of forms)
 * Upgrade button (saves having to remove and re-deploy)
 * Password strength meter for improved account security
-* Allow advanced users to check SSH and FTPS server fingerprints
+* Allow advanced users to check SSH and FTPS server fingerprints from the wizard
 
 ## Future roadmap
 
@@ -66,7 +66,9 @@ SMTP ports, better recommendations can be made to the user
 
 ### Local system
 
-* Scheduled automated tests for critical forms
+* Daily automated tests for business-critical forms
 * Pre-defined mail settings for popular hosts
 * Button to forget current session (if the user is not logged in, then the only
 way to start again is to delete the browser cookie, which is awkward)
+* If there's demand, allow users access to the remote control script to
+control their form installation
