--- a/404.md
+++ b/404.md
@@ -1,7 +1,8 @@
 ---
-layout: post
+layout: page
 title:  "404 not found"
 permalink: /404.html
 ---
 
-This is not the page you're looking for!
+We can't see to find the page you're looking for. Try clicking on the links
+at the top to find your way again.
