More tweaks to the 404 page

--- a/404.md
+++ b/404.md
@@ -1,8 +1,9 @@
 ---
 layout: page
-title:  "404 not found"
+title:  "Page not found"
 permalink: /404.html
+category: system
 ---
 
-We can't see to find the page you're looking for. Try clicking on the links
+Sadly, the page you're looking for is not here. Try clicking on the links
 at the top to find your way again.
